test: refactor SdsmReceiverTest to use @EmbeddedKafka and @KafkaListener, replace EmbeddedKafkaHolder with CountDownLatch for async validation